--- a/index.html
+++ b/index.html
@@ -1,7 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ulises González - Data Scientist & Coach</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            text-align: center;
+            padding: 1em;
+            border-radius: 5px;
+        }
+        h1 {
+            margin-bottom: 0;
+        }
+        .subtitle {
+            font-style: italic;
+            margin-top: 0.5em;
+        }
+        section {
+            background-color: white;
+            margin: 20px 0;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #2c3e50;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 10px;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            padding-left: 20px;
+            position: relative;
+        }
+        li::before {
+            content: "▹";
+            color: #3498db;
+            position: absolute;
+            left: 0;
+        }
+        .course-schedule {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 10px;
+        }
+        .course-item {
+            background-color: #ecf0f1;
+            padding: 10px;
+            border-radius: 5px;
+        }
+    </style>
+</head>
 <body>
-<h1>Hola mundo</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Ulises González</h1>
+        <p class="subtitle">Founder & Business Scientist at Rizoma | Agile & Data Scientist Enthusiast</p>
+    </header>
+
+    <section>
+        <h2>Perfil Profesional</h2>
+        <ul>
+            <li>Founder & Business Scientist at Rizoma</li>
+            <li>ICF Associate Certified Coach (ACC)</li>
+            <li>PST Scrum.org</li>
+            <li>Experto en Data Analytics y Agile Methodologies</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Curso de Data Analytics</h2>
+        <p>Explora y analiza grandes cantidades de datos para obtener información sobre el desempeño empresarial y guiar la planificación futura.</p>
+        <h3>Temas Principales:</h3>
+        <ul>
+            <li>Análisis Descriptivo: "¿Qué pasó?"</li>
+            <li>Análisis Predictivo: "¿Qué pasará?"</li>
+            <li>Análisis Prescriptivo: "¿Qué debería pasar?"</li>
+        </ul>
+        <p>Aplicaremos estos métodos a varios casos de negocios para demostrar cómo extraer valor comercial de los datos y brindar soporte para la toma de decisiones basada en datos.</p>
+    </section>
+
+    <section>
+        <h2>Calendario del Curso</h2>
+        <div class="course-schedule">
+            <div class="course-item">8/18: Introducción a Data Science</div>
+            <div class="course-item">8/20: Command Line, Version Control</div>
+            <div class="course-item">8/25: Data Reading and Cleaning</div>
+            <div class="course-item">8/27: Exploratory Data Analysis</div>
+            <div class="course-item">9/1: Visualización</div>
+            <div class="course-item">9/3: Machine Learning</div>
+            <div class="course-item">9/8: Getting Data</div>
+            <div class="course-item">9/10: K-Nearest Neighbors</div>
+            <div class="course-item">9/15: Basic Model Evaluation</div>
+            <div class="course-item">9/17: Linear Regression</div>
+            <div class="course-item">9/22: First Project Presentation</div>
+            <div class="course-item">9/24: Logistic Regression</div>
+            <div class="course-item">9/29: Advanced Model Evaluation</div>
+            <div class="course-item">10/1: Naive Bayes and Text Data</div>
+            <div class="course-item">10/6: Natural Language Processing</div>
+            <div class="course-item">10/8: Kaggle Competition</div>
+            <div class="course-item">10/13: Decision Trees</div>
+            <div class="course-item">10/15: Ensembling</div>
+            <div class="course-item">10/20: Advanced scikit-learn, Clustering</div>
+            <div class="course-item">10/22: Regularization, Regex</div>
+            <div class="course-item">10/27: Course Review</div>
+            <div class="course-item">10/29: Final Project Presentation</div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Para más información, contacta a Ulises González en <a href="https://www.linkedin.com/in/ulisesgonzalez/">LinkedIn</a></p>
+    </footer>
 </body>
 </html>
